<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.6</version>
        <relativePath/>
    </parent>
    <groupId>gt.edu.umg</groupId>
    <artifactId>umg-service-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <organization>
        <name>Universidad Mariano Galvez de Guatemala.</name>
        <url>https://umg.edu.gt/</url>
    </organization>
    <developers>
        <developer>
            <name>Kevin Borge Tobar</name>
            <email>kborget@umg.edu.gt</email>
            <roles>
                <role>developer</role>
                <role>owner</role>
            </roles>
        </developer>
        <developer>
            <name>Julio Sincal Aroche</name>
            <email>jsincala@umg.edu.gt</email>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
        <developer>
            <name>Javier Marroquín Sanchez</name>
            <email>jmarroquins13@umg.edu.gt</email>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>
    <properties>
        <java.version>21</java.version>
        <spring-boot.version>3.4.6</spring-boot.version>
        <spring-cloud.version>4.2.2</spring-cloud.version>
        <spring-boot-admin.version>3.2.2</spring-boot-admin.version>
        <camel.spring.boot.version>4.10.2</camel.spring.boot.version>
        <lombok.version>1.18.30</lombok.version>
        <jackson.version>2.17.1</jackson.version>
        <org.apache.cxf.version>4.1.1</org.apache.cxf.version>
        <mysql.connector.version>9.3.0</mysql.connector.version>
        <swagger.version>2.8.9</swagger.version>
        <redis.version>3.0.0</redis.version>

        <!-- Compilar con JDK 21 apuntando a APIs de Java 17 para máxima compatibilidad -->
        <maven.compiler.release>17</maven.compiler.release>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <java.suffix>jre-headless</java.suffix>
        <docker.image.prefix>seminariojalapa</docker.image.prefix>
        <!-- Usar la imagen del registry (multi-arch) en lugar de docker:// local -->
        <docker.image.base>seminariojalapa/umg-base-liberica-openjre-alpine:${java.version}-${java.suffix}</docker.image.base>
        <maven.build.timestamp.format>yyyyMMdd.HHmmss</maven.build.timestamp.format>
        <maven.build.timestamp>${maven.build.timestamp}</maven.build.timestamp>

    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
                <version>${spring-boot.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.apache.camel.springboot</groupId>
                <artifactId>camel-core-starter</artifactId>
                <version>${camel.spring.boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.camel.springboot</groupId>
                <artifactId>camel-mail-starter</artifactId>
                <version>${camel.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.camel</groupId>
                <artifactId>camel-test-spring-junit5</artifactId>
                <version>${camel.spring.boot.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mysql</groupId>
                <artifactId>mysql-connector-j</artifactId>
                <version>${mysql.connector.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.persistence</groupId>
                <artifactId>jakarta.persistence-api</artifactId>
                <version>3.1.0</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${swagger.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-starter-gateway</artifactId>
                <version>${spring-cloud.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-starter-bootstrap</artifactId>
                <version>${spring-cloud.version}</version>
            </dependency>
            <dependency>
                <groupId>de.codecentric</groupId>
                <artifactId>spring-boot-admin-starter-server</artifactId>
                <version>${spring-boot-admin.version}</version>
            </dependency>
            <dependency>
                <groupId>de.codecentric</groupId>
                <artifactId>spring-boot-admin-client</artifactId>
                <version>${spring-boot-admin.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-actuator</artifactId>
                <version>3.4.6</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-data-redis</artifactId>
                <version>${redis.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                </plugin>
                <plugin>
                    <groupId>com.google.cloud.tools</groupId>
                    <artifactId>jib-maven-plugin</artifactId>
                    <configuration>
                        <allowInsecureRegistries>true</allowInsecureRegistries>
                        <container>
                            <jvmFlags>
                                <jvmFlag>-server</jvmFlag>
                                <jvmFlag>-Djava.security.egd=file:/dev/./urandom</jvmFlag>
                                <jvmFlag>-Xlog:gc*:file=/tmp/cglog.gc:time,pid,tags:filecount=10,filesize=20m</jvmFlag>
                                <jvmFlag>-Xms256m</jvmFlag>
                                <jvmFlag>-Xmx768m</jvmFlag>
                            </jvmFlags>
                            <volumes>
                                <volume>/tmp</volume>
                            </volumes>
                            <workingDirectory>/app</workingDirectory>
                            <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
                            <labels>
                                <maintainer>kevinborgetonar1998@gmail.com</maintainer>
                            </labels>
                        </container>
                        <from>
                            <image>${docker.image.base}</image>
                        </from>
                        <to>
                            <image>${docker.image.prefix}/${project.artifactId}:${project.version}-${maven.build.timestamp}</image>
                        </to>
                        <extraDirectories>
                            <permissions>
                                <permission>
                                    <file>/app</file>
                                    <mode>777</mode>
                                </permission>
                            </permissions>
                        </extraDirectories>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>timestamp-property</id>
                            <goals>
                                <goal>timestamp-property</goal>
                            </goals>
                            <configuration>
                                <name>current.time</name>
                                <pattern>yyyyMMdd.HHmmss</pattern>
                                <timeZone>GMT-6</timeZone>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                            <goal>build-info</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <layers>
                        <enabled>true</enabled>
                    </layers>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>web-service</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.google.cloud.tools</groupId>
                        <artifactId>jib-maven-plugin</artifactId>
                        <version>3.4.5</version>
                        <configuration>
                            <to>
                                <image>${docker.image.prefix}/web-service-${project.artifactId}</image>
                            </to>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <modules>
        <module>commons/generic-data</module>
        <module>apps/business-partners-service</module>
        <module>apps/notification-service</module>
        <module>apps/employee-service</module>
    </modules>

</project>
